--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,6 +14,7 @@
         {% block javascripts %}{% endblock %}
     </head>
     <body>
+        {{ include('::navbar.html.twig') }}
         {% block body %}{% endblock %}
     </body>
 </html>
