--- a/src/CM/CoreBundle/Resources/views/membres/accueil.html.twig
+++ b/src/CM/CoreBundle/Resources/views/membres/accueil.html.twig
@@ -5,6 +5,7 @@
 {% endblock title %}
 
 {% block javascripts %}
+    <script src="{{ asset('bundles/cmcore/js/previewContact.js') }}"></script>
 {% endblock javascripts %}
 
 {% block body %}
