--- a/src/CM/CoreBundle/Resources/views/membres/ajouter.html.twig
+++ b/src/CM/CoreBundle/Resources/views/membres/ajouter.html.twig
@@ -1,12 +1,8 @@
 {% extends 'CMCoreBundle::layout.html.twig' %}
 
 {% block title %}
-    Accueil - {{ parent() }}
+    Ajouter un contact - {{ parent() }}
 {% endblock title %}
-
-{% block javascripts %}
-    <script src="{{ asset('bundles/cmcore/js/previewContact.js') }}"></script>
-{% endblock javascripts %}
 
 {% block body %}
     <div class="container">
