--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -13,11 +13,12 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li{% if app.request.get('_route') == "cm_core_homepage" %} class="active"{% endif %}><a href="{{ path('cm_core_homepage') }}">Accueil <span class="sr-only">(current)</span></a></li>
-                <li{% if app.request.get('_route') == "cm_core_add_contact" %} class="active"{% endif %}><a href="{{ path('cm_core_add_contact') }}">Ajouter un contact</a></li>
+                {% if app.user %}<li{% if app.request.get('_route') == "cm_core_add_contact" %} class="active"{% endif %}><a href="{{ path('cm_core_add_contact') }}">Ajouter un contact</a></li>{% endif %}
             </ul>
+            {% if app.user %}
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">USERNAME <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle" aria-hidden="true"></i> {{ app.user.username }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
@@ -27,6 +28,7 @@
                     </ul>
                 </li>
             </ul>
+            {% endif %}
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
